# helix-srop-assignment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: main.py  settings.py
app/agents/: account.py  escalation.py  knowledge.py  orchestrator.py
app/agents/tools/: __init__.py  account_tools.py  search_docs.py  ticket_tools.py
app/api/: routes_chat.py  routes_sessions.py  routes_traces.py
app/db/: models.py
app/llm/: provider.py
app/obs/: logging.py
app/rag/: embeddings.py  ingest.py  rerank.py  vector_store.py
app/srop/: pipeline.py  state.py
tests/: conftest.py  test_api.py  test_retriever.py
